# delmo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.forgejo/workflows/: ci.yml
.githooks/: pre-push
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_settings_table.py  0002_create_rules_and_logs_tables.py  0003_add_dry_run_require_complete_to_rules.py
backend/app/: main.py
backend/app/api/: connection.py  dashboard.py  logs.py  rules.py  scheduler.py  settings.py  torrents.py  ws.py
backend/app/core/: broadcast.py  config.py  database.py
backend/app/models/: move_log.py  rule.py  setting.py
backend/app/schemas/: connection.py  dashboard.py  move_log.py  rule.py  setting.py  torrent.py
backend/app/services/: deluge.py  engine.py  scheduler.py
backend/tests/: conftest.py
backend/tests/unit/: test_connection_api.py  test_connection_real_db.py  test_dashboard_api.py  test_database.py  test_deluge_service.py  test_logs_api.py  test_rule_engine.py  test_rules_api.py  test_rules_preview.py  test_scheduler.py  test_scheduler_api.py  test_settings.py  test_ws_logs.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx  test-setup.ts
frontend/src/components/: ThemeToggle.test.tsx  ThemeToggle.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/ui/: Badge.test.tsx  Badge.tsx  Card.test.tsx  Card.tsx  Table.tsx  (+7 more)
frontend/src/hooks/: useTheme.test.ts  useTheme.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/lib/: api.test.ts  api.ts  cn.test.ts  cn.ts
frontend/src/pages/: Activity.tsx  Dashboard.tsx  Docs.tsx  Rules.tsx  Settings.tsx
