[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[project]
name = "delmo"
version = "0.1.0"
description = "Automatic torrent data mover via Deluge RPC"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "apscheduler>=3.10.4",
    "deluge-client>=1.10.0",
    "pydantic>=2.9.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "anyio[trio]>=4.7.0",
]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A"]
ignore = [
    "S101",   # assert in tests is fine
    "B008",   # FastAPI Depends() in function signatures
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["S101", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["backend"]
testpaths = ["backend/tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
markers = [
    "unit: unit tests (fast, no I/O)",
    "integration: integration tests (uses DB or external services)",
]

[tool.coverage.run]
source_pkgs = ["app"]
omit = ["*/tests/*", "*/alembic/*"]
